--- a/netlify.toml
+++ b/netlify.toml
@@ -10,4 +10,11 @@
 [[headers]]
   for = "/*"
     [headers.values]
-    Cache-Control = "public, max-age=0, must-revalidate" 
+    Cache-Control = "no-cache, no-store, must-revalidate"
+    Pragma = "no-cache"
+    Expires = "0"
+
+[[headers]]
+  for = "/favicon-16x16.png"
+    [headers.values]
+    Cache-Control = "public, max-age=31536000" 
