--- a/netlify.toml
+++ b/netlify.toml
@@ -15,6 +15,6 @@
     Expires = "0"
 
 [[headers]]
-  for = "/favicon-16x16.png"
+  for = "/favicon.ico"
     [headers.values]
     Cache-Control = "public, max-age=31536000" 
